@@ -53,6 +53,15 @@
     </env-entry>
 
     <env-entry>
+      <env-entry-name>cruisecontrol.rmiport</env-entry-name>
+      <env-entry-value>1099</env-entry-value>
+      <env-entry-type>java.lang.Integer</env-entry-type>
+      <description>Port number for the JMX RMI adaptor and Connector Server. This will activate the JMX admin functionality of CruiseControl.
+          If no RMI registry is running on the specified port, a registry will be started for you.
+      </description>
+    </env-entry>
+
+    <env-entry>
       <env-entry-name>cruisecontrol.run.on.start</env-entry-name>
       <env-entry-value>true</env-entry-value>
       <env-entry-type>java.lang.Boolean</env-entry-type>
